:bug: fixed spacing

--- a/src/core/components/Form.styl
+++ b/src/core/components/Form.styl
@@ -143,7 +143,7 @@
 		max-height 250px
 		background-color gray-0
 		box-shadow 1px 3px 19px -6px rgba(0, 0, 0, 0.3)
-		top calc(100% + 4px)
+		top 82px
 		z-index 1
 		border-radius 4px
 		padding 8px 0
@@ -173,7 +173,7 @@
 		flex-direction column
 		align-items center
 		padding 15px
-		text-align: center
+		text-align center
 
 		p
 			padding 0
@@ -188,8 +188,6 @@
 		flex-shrink 0
 		flex-grow 0
 		color gray-30
-
-
 
 // password field
 .iq-password-field
